--- a/css/pacta-help-support.page.css
+++ b/css/pacta-help-support.page.css
@@ -236,7 +236,7 @@
       font-weight: 500;
       color: var(--grey-900);
       line-height: 1.4;
-      overflow-wrap: anywhere;
+      overflow-wrap: break-word;
     }
     .support-form {
       display: flex;
